# ofxstatement-french

./: .gitignore  CHANGELOG.md  Makefile  README.md  __about__.py  environment.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_requirements.txt
src/ofxstatement/plugins/fr/: about.py  banquepopulaire.py  statement.py
src/ofxstatement/plugins/fr/tests/: test_banquepopulaire.py
src/ofxstatement/plugins/fr/tests/samples/: Extrait_de_compte.txt
tests/: test_banquepopulaire.py
tests/samples/: 46297554894_02092025_04102025.ofx  BPACA_OP_20220717-2.ofx  BPACA_OP_20220717.ofx  BPACA_OP_20220802.ofx  BPACA_OP_20220828.ofx  Extrait-de-compte-20220802.pdf.ofx  Extrait-de-compte-20220802.pdf.txt  Extrait-de-compte-20220902.pdf.txt  Extrait-de-compte-20231130.pdf.txt  Extrait-de-compte-20240102.pdf.txt  Extrait_de_compte_balance.txt  Extrait_de_compte_balance.txt.ofx  Extrait_de_compte_full.txt  Extrait_de_compte_janvier.txt  Extrait_de_compte_janvier_2021.txt
